Fix errors after merge