@@ -69,9 +69,6 @@ public class VillagerManager {
         conversation.addMessage(new Message(ChatRole.USER, message));
 
         var response = sendConversationToCloudflareLLM(conversation);
-
-        conversation.addMessage(new Message(ChatRole.ASSISTANT, response));
-        memory.updateConversation(playerId, conversation);
         VillagerMemory finalMemory = memory;
         response.ifPresent(m -> {
             conversation.addMessage(new Message(ChatRole.ASSISTANT, m));
@@ -79,7 +76,7 @@ public class VillagerManager {
         });
 
         // Conclude memory if it's going to too large
-        if(conversation.messages.size() > Main.CONFIG_MANAGER.getConfig().getConclusionMessageLimit()) {
+        if (conversation.messages.size() > Main.CONFIG_MANAGER.getConfig().getConclusionMessageLimit()) {
             memory = concludeMemory(memory, playerId);
         }
 
@@ -97,18 +94,8 @@ public class VillagerManager {
         var model = new Conversation(new ArrayList<>());
         model.addMessage(new Message(ChatRole.SYSTEM, LLM_CONCLUDE_PROMPT));
         model.addMessage(new Message(ChatRole.USER, gson.toJson(villager.getConversation(playerId))));
-        final var villagerSystemPrompt = villager.getConversation(playerId).messages.get(0);
+        final var villagerSystemPrompt = villager.getConversation(playerId).messages.getFirst();
         final var conclusion = sendConversationToCloudflareLLM(model);
-
-        var conversation = new Conversation(new ArrayList<>());
-        conversation.addMessage(villagerSystemPrompt);
-        conversation.addMessage(new Message(ChatRole.SYSTEM, conclusion));
-
-        villager.updateConversation(playerId, conversation);
-        return villager;
-    }
-
-    private String sendConversationToCloudflareLLM(Conversation conversation) throws IOException, InterruptedException {
         conclusion.ifPresent(m -> {
             var conversation = new Conversation(new ArrayList<>());
             conversation.addMessage(villagerSystemPrompt);
